# cripto_market

./: .gitignore  README.md  docker-compose.yml  services.sh  start_backend.sh
docs/: design_spec.md
infra/monitoring/: prometheus.yml
infra/postgres/: init.sql
libs/common/: pyproject.toml
libs/common/common/: position_store.py  schemas.py
services/api-gateway/: pyproject.toml
services/api-gateway/app/: main.py
services/backtester/: pyproject.toml
services/backtester/app/: download_data.py  optimize_strategy.py  run_backtest.py
services/candle-builder/: pyproject.toml
services/candle-builder/app/: main.py
services/connector-marketdata/: pyproject.toml
services/connector-marketdata/app/: main.py
services/execution-engine/: pyproject.toml
services/execution-engine/app/: main.py
services/feature-engine/: pyproject.toml
services/feature-engine/app/: main.py
services/risk-engine/: pyproject.toml
services/risk-engine/app/: main.py
services/signal-engine/: pyproject.toml
services/signal-engine/app/: main.py  regime.py  strategy_interface.py
services/signal-engine/app/strategies/: rsi_mean_reversion.py  trend_following_v1.py
